# CyclopsCmd

./: .gitignore  CNAME  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js  vitest.config.ts
.github/workflows/: electron-release.yml  pages.yml
backend/: App.py  app.py  requirements.txt
backend/tests/: test_smoke.py
desktop/electron/: .gitignore  README.md  main.cjs  package-lock.json  package.json  preload.cjs
desktop/electron/pyinstaller/: backend_entry.py
desktop/electron/scripts/: build-backend-sidecar.cjs  build-frontend.cjs
frontend/: App.css  App.jsx  shadcnComponents.js
frontend/components/ui/: alert-dialog.jsx  button.jsx  dialog.jsx
public/: index.html
scripts/: start.sh  test_backend.sh
src/: App.css  App.jsx  ShadcnModals.jsx  ansi-to-html.js  tailwind.config.js  validation.js
src/__tests__/: ansi-to-html.test.js  validation.test.js
src/components/ui/: index.js
