[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclopscmd-backend"
version = "0.1.0"
description = "CyclopsCmd backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "asyncssh",
  "SQLAlchemy",
]

[tool.setuptools]
package-dir = {"" = "backend"}
py-modules = ["app", "App"]
